--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   lottie: ^3.1.2
-
+  dio: ^5.7.0
+  cached_network_image: ^3.4.1
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
