--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
+  flutter_svg: ^2.0.10+1
+  path_provider: ^2.1.4
+  html: ^0.15.0
+  device_preview: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lottie/
-
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
